--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,10 @@
                   >
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./menu.html">Menu</a>
+                  <a class="nav-link" href="./order.html">Order</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./love.html">Send Love</a>
                 </li>
                 <li class="nav-item dropdown">
                   <a
@@ -250,7 +253,7 @@
             <div class="product">
               <picture>
                 <img
-                  src="/images/dishes/10854_chocolate_souffle.webp"
+                  src="images/dishes/10854_chocolate_souffle.webp"
                   alt="nicoise salad"
                 />
               </picture>
@@ -275,7 +278,7 @@
             <div class="product">
               <picture>
                 <img
-                  src="/images/dishes/10651_salad_lyonnaisey.webp"
+                  src="images/dishes/10651_salad_lyonnaisey.webp"
                   alt="salad lyonnaisey"
                 />
               </picture>
