--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
 </head>
 
 <body class="bg-dark">
-  <div class="chef1"><span>Hello world</span></div>
-  <div class="chef2"><span>Hello world</span></div>
-  <div class="chef3"><span>Hello world</span></div>
-  <div class="chef4"><span>Hello world</span></div>
+    <div class="overall">
+        <img srcset="" src="./images/over/steaming plate gif.gif" alt="">
+    </div>
+  <div class="chef1"><span class="infoBorder"></span></div>
+  <div class="chef2"><span class="infoBorder"></span></div>
+  <div class="chef3"><span class="infoBorder"></span></div>
+  <div class="chef4"><span class="infoBorder"></span></div>
   <div class="row">
     <div class="col-1"></div>
     <div class="col-10">
@@ -51,34 +54,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="./love.html">Send Love</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                  aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li>
-                    <a class="dropdown-item" href="#">Another action</a>
-                  </li>
-                  <li>
-                    <hr class="dropdown-divider" />
-                  </li>
-                  <li>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                  </li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
             </ul>
-            <form class="d-flex">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
-              <button class="btn btn-outline-success" type="submit">
-                Search
-              </button>
-            </form>
           </div>
         </div>
       </nav>
@@ -374,58 +350,30 @@
   <footer id="footer" class="footer-1 mt-5">
     <div class="main-footer widgets-dark typo-light ">
       <div class="container">
-        <div class="row">
+        <div class="row ps-md-5 ms-md-5">
 
-          <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="col-xs-12 col-sm-6 col-md-4 ps-md-5">
             <div class="widget subscribe no-box">
-              <h5 class="widget-title">COMPANY NAME<span></span></h5>
-              <p>About the company, little discription will goes here.. </p>
+              <h5 class="widget-title">Cafe au Love<span></span></h5>
+              <p>Adipisicing repudiandae laboriosam doloribus molestiae repellat Saepe non repellat voluptatem.</p>
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-3">
-            <div class="widget no-box">
-              <h5 class="widget-title">Quick Links<span></span></h5>
-              <ul class="thumbnail-widget">
-                <li>
-                  <div class="thumb-content"><a href="#.">Get Started</a></div>
-                </li>
-                <li>
-                  <div class="thumb-content"><a href="#.">Top Leaders</a></div>
-                </li>
-                <li>
-                  <div class="thumb-content"><a href="#.">Success Stories</a></div>
-                </li>
-                <li>
-                  <div class="thumb-content"><a href="#.">Event/Tickets</a></div>
-                </li>
-                <li>
-                  <div class="thumb-content"><a href="#.">News</a></div>
-                </li>
-                <li>
-                  <div class="thumb-content"><a href="#.">Lifestyle</a></div>
-                </li>
-                <li>
-                  <div class="thumb-content"><a href="#.">About</a></div>
-                </li>
-              </ul>
-            </div>
-          </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="widget no-box">
-              <h5 class="widget-title">Get Started<span></span></h5>
-              <p>Get access to your full Training and Marketing Suite.</p>
+              <h5 class="widget-title">Send Love<span></span></h5>
+              <p>Adipisicing laboriosam id tenetur doloribus perspiciatis Minima totam id molestiae vel enim. Velit ipsa dolor ullam eum temporibus odio A pariatur accusantium magni esse quaerat. Temporibus aspernatur saepe soluta ratione quia Molestiae voluptate nobis pariatur numquam expedita? Odio maiores cupiditate?</p>
               <a class="btn" href="https://bit.ly/3m9avif" target="_blank">Subscribe Now</a>
             </div>
           </div>
 
-          <div class="col-xs-12 col-sm-6 col-md-3">
+          <div class="col-xs-12 col-sm-6 col-md-4">
 
             <div class="widget no-box">
               <h5 class="widget-title">Contact Us<span></span></h5>
 
-              <p><a href="mailto:info@domain.com" title="glorythemes">info@domain.com</a></p>
+              <p><a href="mailto:info@domain.com" title="glorythemes">cafe.au.love@peace.com</a></p>
               <ul class="social-footer2">
                 <li class=""><a title="youtube" target="_blank" href="https://bit.ly/3m9avif"><img alt="youtube"
                       width="30" height="30"
@@ -455,7 +403,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <p>Copyright Company Name © 2021. All rights reserved.</p>
+            <p>Copyright Cafe au Love © 2021. All rights reserved.</p>
           </div>
         </div>
       </div>
