speech bubble, footer, love.html

--- a/src/index.html
+++ b/src/index.html
@@ -26,10 +26,10 @@
     <div class="overall">
         <img srcset="" src="./images/over/steaming plate gif.gif" alt="">
     </div>
-  <div class="chef1"><span></span></div>
-  <div class="chef2"><span></span></div>
-  <div class="chef3"><span></span></div>
-  <div class="chef4"><span></span></div>
+  <div class="chef1"><span class="infoBorder"></span></div>
+  <div class="chef2"><span class="infoBorder"></span></div>
+  <div class="chef3"><span class="infoBorder"></span></div>
+  <div class="chef4"><span class="infoBorder"></span></div>
   <div class="row">
     <div class="col-1"></div>
     <div class="col-10">
@@ -354,7 +354,7 @@
 
           <div class="col-xs-12 col-sm-6 col-md-4 ps-md-5">
             <div class="widget subscribe no-box">
-              <h5 class="widget-title">Cafe Au Love<span></span></h5>
+              <h5 class="widget-title">Cafe au Love<span></span></h5>
               <p>Adipisicing repudiandae laboriosam doloribus molestiae repellat Saepe non repellat voluptatem.</p>
             </div>
           </div>
@@ -362,7 +362,7 @@
 
           <div class="col-xs-12 col-sm-6 col-md-4">
             <div class="widget no-box">
-              <h5 class="widget-title">Free Love<span></span></h5>
+              <h5 class="widget-title">Send Love<span></span></h5>
               <p>Adipisicing laboriosam id tenetur doloribus perspiciatis Minima totam id molestiae vel enim. Velit ipsa dolor ullam eum temporibus odio A pariatur accusantium magni esse quaerat. Temporibus aspernatur saepe soluta ratione quia Molestiae voluptate nobis pariatur numquam expedita? Odio maiores cupiditate?</p>
               <a class="btn" href="https://bit.ly/3m9avif" target="_blank">Subscribe Now</a>
             </div>
@@ -403,7 +403,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-12 text-center">
-            <p>Copyright Company Name © 2021. All rights reserved.</p>
+            <p>Copyright Cafe au Love © 2021. All rights reserved.</p>
           </div>
         </div>
       </div>
