--- a/index.html
+++ b/index.html
@@ -49,10 +49,13 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./order.html">Order</a>
+                  <a class="nav-link" href="./love.html">Send Love</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./love.html">Send Love</a>
+                <a class="nav-link" href="./delivery.html">Order</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./animatedCoin.html">Send Love 2</a>
               </li>
             </ul>
           </div>
