--- a/delivery.html
+++ b/delivery.html
@@ -27,10 +27,10 @@
 <body>
 
     <header class="headermenu">
-        <div class="chef1"><span>Hello world</span></div>
-        <div class="chef2"><span>Hello world</span></div>
-        <div class="chef3"><span>Hello world</span></div>
-        <div class="chef4"><span>Hello world</span></div>
+        <!-- <div class="chef1"><span>Hello world</span></div> -->
+        <!-- <div class="chef2"><span>Hello world</span></div> -->
+        <!-- <div class="chef3"><span>Hello world</span></div> -->
+        <!-- <div class="chef4"><span>Hello world</span></div> -->
         <div class="row">
             <div class="col-1"></div>
             <div class="col-10">
@@ -76,7 +76,7 @@
 
             <div class="col-75 bestell_form">
                 <div class="">
-                    <form action="">
+                    <form action="/form" autocomplete="off">
 
                         <div class="row">
                             <div class="col-50">
