--- a/index.html
+++ b/index.html
@@ -96,28 +96,22 @@
 
             <img src="./images/main/first.jpg" class="d-block w-100" alt="..." />
             <div class="carousel-caption d-none d-md-block">
-              <h5>First slide label</h5>
-              <p>
-                Some representative placeholder content for the first slide.
-              </p>
+              <h5 class="">From France with Love</h5>
+              <p>Welcome to a French bistro with cool vibes</p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/main/second.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Second slide label</h5>
-              <p>
-                Some representative placeholder content for the second slide.
-              </p>
+            <div class="carousel-caption d-none d-md-block text-dark">
+              <h5 style="font-size:2rem;">Send Love</h5>
+              <p>Share two chocolate cakes with your friends. It's on the house. </p>
             </div>
           </div>
           <div class="carousel-item">
             <img src="./images/main/third.jpg" class="d-block w-100" alt="..." />
-            <div class="carousel-caption d-none d-md-block">
-              <h5>Third slide label</h5>
-              <p>
-                Some representative placeholder content for the third slide.
-              </p>
+            <div class="carousel-caption d-none d-md-block text-light">
+              <h5 style="font-size:2rem;">Grab two drinks</h5>
+              <p>Enjoy the day, chat with a friend and leave your worries behind. </p>
             </div>
           </div>
         </div>
@@ -139,8 +133,8 @@
     <div class="col-1"></div>
     <div class="col-10">
       <main>
-        <div class="text">
-          <h1>Simple Single carousel</h1>
+        <div class="text text-light">
+          <h1 class="">Eat.Drink.Love </h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
             non atque adipisci est, recusandae aperiam, ullam minima quos
