--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="./love.html">Send Love</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="./delivery.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./animatedCoin.html">Send Love 2</a>
+                <a class="nav-link" href="./animatedCoin.html">Send Love</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./cafe.html">Menu</a>
               </li>
             </ul>
           </div>
@@ -135,12 +135,10 @@
       <main>
         <div class="text text-light">
           <h1 class="">Eat.Drink.Love </h1>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam
-            non atque adipisci est, recusandae aperiam, ullam minima quos
-            nostrum animi voluptas sequi. At repellendus fuga reiciendis
-            accusantium, dolor suscipit repellat?
-          </p>
+            <p class="">Now more than ever, we crave connection, joy, love in the world. We would love to invite you to co-create a Love Dance in the world in 3 steps:  </p>
+            <p>Step 1. For every order you place with us, we send one Café au Love Coin: The Connection Currency.</p>
+            <p>Step 2. Send this coin to a friend or family member. Send the love. </p>
+            <p>Step 3. When they open the QR Code Coin, they’ll receive your gift: two chocolate cakes are delivered to their home. Receiving the love. And sharing the love forward. </p>
         </div>
         <header>
           <h1>Top Hottest Products</h1>
