--- a/delivery.html
+++ b/delivery.html
@@ -50,13 +50,13 @@
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="./love.html">Send Love</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link" href="./delivery.html">Order</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./animatedCoin.html">Send Love 2</a>
+                <a class="nav-link" href="./animatedCoin.html">Send Love</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./cafe.html">Menu</a>
               </li>
             </ul>
           </div>
