--- a/animatedCoin.html
+++ b/animatedCoin.html
@@ -83,6 +83,28 @@
         <!-- </div> -->
        
     </div>
+  <div class="row">
+    <div class="col-1"></div>
+    <div class="col-10">
+      <main>
+        <div class="text text-dark">
+          <h1 class="">Send Love</h1>
+            <p class="">Now more than ever, we crave connection, joy, love in the world. We would love to invite you to co-create a Love Dance in the world in 3 steps:  </p>
+            <p>Step 1. For every order you place with us, we send one Café au Love Coin: The Connection Currency.</p>
+            <p>Step 2. Send this coin to a friend or family member. Send the love. </p>
+            <p>Step 3. When they open the QR Code Coin, they’ll receive your gift: two chocolate cakes are delivered to their home. Receiving the love. And sharing the love forward. </p>
+            <a href="order.html" class="btn btn-warning" style="background-color: #f28b31; width:300px;"> Send the chocolate cakes</a>
+            <img src="images/coin/back.png" alt="">
+        </div>
+      </main>
+    </div>
+    <div class="col-1"></div>
+
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+    <div class="col-4"></div>
+
+  </div>
     </div>
     <script src="scripts/index.js"></script>
 </body>
