--- a/cafe.html
+++ b/cafe.html
@@ -1,86 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Le Frog</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Shalimar&display=swap"
-        rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&display=swap"
-        rel="stylesheet" />
     <link
-        href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&family=Shalimar&display=swap"
-        rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap" rel="stylesheet" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Shalimar&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&family=Indie+Flower&family=Shalimar&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yuji+Boku&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/main.css" />
-</head>
+  </head>
 
-<body>
-
+  <body class="bg-light">
     <header class="headermenu">
-        <!-- <div class="chef1"><span>Hello world</span></div> -->
-        <!-- <div class="chef2"><span>Hello world</span></div> -->
-        <!-- <div class="chef3"><span>Hello world</span></div> -->
-        <!-- <div class="chef4"><span>Hello world</span></div> -->
-        <div class="row">
-            <div class="col-1"></div>
-            <div class="col-10">
-      <nav class="navbar p-0 navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand p-0" href="#">
-            <img src="./images/logo.png" alt="" width="75" height="75" />
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./delivery.html">Order</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./animatedCoin.html">Send Love</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./cafe.html">Menu</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
+      <!-- <div class="chef1"><span>Hello world</span></div> -->
+      <!-- <div class="chef2"><span>Hello world</span></div> -->
+      <!-- <div class="chef3"><span>Hello world</span></div> -->
+      <!-- <div class="chef4"><span>Hello world</span></div> -->
+      <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10">
+          <nav class="navbar p-0 navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand p-0" href="#">
+                <img src="./images/logo.png" alt="" width="75" height="75" />
+              </a>
+              <button
+                class="navbar-toggler"
+                type="button"
+                data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                    <a
+                      class="nav-link active"
+                      aria-current="page"
+                      href="./index.html"
+                      >Home</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./delivery.html">Order</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./animatedCoin.html">Send Love</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="./cafe.html">Menu</a>
+                  </li>
+                </ul>
+              </div>
             </div>
-            <div class="col-1"></div>
+          </nav>
         </div>
-
+        <div class="col-1"></div>
+      </div>
     </header>
-    <div class="container">
-        <img src="images/coin/cafe.png" alt="">
+    <div class="row parent">
+      <div
+        class="
+          col-2
+          d-flex
+          justify-content-center
+          align-items-center
+          
+        "
+      >
+        <div class="sideTitle title__trans pb-5">Cafe au Love</div>
+      </div>
+      <!--     <h2 class="title__cafe">Cafe au Love</h2> -->
+      <div class="col-8">
+          <img src="images/coin/cafe.png" alt="" />
+      </div>
+      <div class="col-2"></div>
     </div>
-    <div class="container delivery_map">
-        <div id="googleMap" style="width:100%;height:700px;"></div>
-    </div>
+
+
 
     <!-- <script src="scripts/index.js"></script> -->
     <script src="scripts/map.js"></script>
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABEcGxHTeHXL1zMyaRscQ-bOpPZoOHFro&callback=myMap&libraries=places"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyABEcGxHTeHXL1zMyaRscQ-bOpPZoOHFro&callback=myMap&libraries=places"></script>
     <script>
-        google.maps.event.addDomListener(window, 'load', init);
+      google.maps.event.addDomListener(window, "load", init);
     </script>
-</body>
-
+  </body>
 </html>
